# compare-deeplibs

./: .gitignore  README.md  compare.ipynb  extract_cifar10.py  lap_record.csv  prepare_cifar10.sh  pyproject.toml  requirements.txt  train_chainer.py  train_keras.py  train_sonnet.py  train_tf.py  train_torch.py  utils.py
chainer/: dataset.py  model.py  train.py
keras/: dataset.py  model.py  train.py  train_tf.py
legacy/: train_keras.py
tf/: dataset.py  datasetv2.py  model_keras.py  modelv2.py  train_keras.py  train_keras_gen.py  train_tfv2.py  trainv2.py
tfv1/: dataset_tf.py  model_keras.py  model_tf.py  train_keras.py  train_keras_gen.py  train_tf.py
tfv2/: dataset_tf.py  train_keras.py  train_keras_gen.py  train_tf.py
torch/: dataset.py  model.py  train.py
