[tool.poetry]
name = "compare-deeplibs"
version = "0.1.0"
description = "Compare deep learning libraries"
authors = ["Daigo Hirooka <daigo.hirooka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
tensorflow = "^2.2.0"
torch = "^1.5.0"
albumentations = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
